--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "chromedriver": "^2.46.0",
-    "nightwatch": "^2.3.3"
+    "nightwatch": "^2.3.3",
+    "protractor": "^7.0.0"
   }
 }
