--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nightwatch",
-    "debug": "node --inspect-brk ./node_modules/.bin/nightwatch"
+    "test": "nightwatch"
   },
   "keywords": [],
   "author": "",
